# natural-science-2

./: .gitignore  README.md  homework_electromagnetism.ipynb  homework_optional.ipynb  pyproject.toml
lab_2_2/: README.md  lab_2_2_analysis_notebook.ipynb  measurements.py
lab_2_5/: README.md  lab_2_5_analysis_notebook.ipynb  lab_2_5_observations.csv
lab_3_2_1/: README.md  lab_3_2_1_data.csv
lab_3_3/: README.md  lab_3_3_analysis_notebook.ipynb  lab_3_3_data.csv
lab_3_7_1/: README.md  lab_3_7_1_analysis_notebook.ipynb  measured_data.csv  source_of_the_light.csv
lab_3_7_2/: README.md  lab_3_7_2_analysis_notebook.ipynb
