[tool.poetry]
name = "natural-sciences-2"
version = "0.0.1"
description = "Natural sciences 2"
authors = ["Romans",]

[tool.poetry.dependencies]
python = "3.12.8"
pandas = "==1.5.3"
numpy = "==1.26.4"
scikit-learn = "==1.6.1"
setuptools = "==65.4.1"
matplotlib = "==3.10.1"
plotly = "==5.24.1"
scipy = "<1.15.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
notebook = "^7.3.3"